--- a/css/example.css
+++ b/css/example.css
@@ -1,8 +1,8 @@
-html, body {
+.demo-body {
 	margin: 0;
 	padding: 0;
 }
-body {
+.demo-body {
 	background: #ebebeb;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	font-weight: 300;
