--- a/css/example.css
+++ b/css/example.css
@@ -293,7 +293,7 @@ code.prettyprint {
 	border: solid 1px #aaaeb0;
 }
 
-li.L0, li.L1, li.L2, li.L3, li.L5, li.L6, li.L7, li.L8 { list-style-type: inherit; }
+li.L0, li.L1, li.L2, li.L3, li.L5, li.L6, li.L7, li.L8 { list-style: decimal inside;  }
 li.L1, li.L3, li.L5, li.L7, li.L9 { background: #f5f5f5; }
 
 .code-wrapper {
