--- a/css/example.css
+++ b/css/example.css
@@ -1,13 +1,3 @@
-.demo-body {
-	margin: 0;
-	padding: 0;
-	background: #ebebeb;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-	font-weight: 300;
-	-webkit-font-smoothing: antialiased;
-	text-align: center;
-}
-
 sup {
 	margin: 0 -2px 0 -3px;
 	font-size: 8px;
@@ -15,16 +5,21 @@ sup {
 
 a, a:visited { color: #2d5b98; }
 
-hr {
-	margin-top: 40px;
+
+.example-block,
+.example-header,
+.example-options {
+	text-align: center;
 }
+
+
 
 .example-block {
 	position: relative;
 	margin: 20px auto;
 	width: 400px;
 	background: #fff;
-	border: 1px solid #aaaeb0;
+	border: 1px solid #ebebeb;
 	border-radius: 4px;
 	padding: 20px 0;
 	text-align: center;
@@ -51,27 +46,30 @@ hr {
 	vertical-align: top;
 }
 
-.demo-body h1 {
+.headline {
 	margin: 0 auto 15px;
 	color: #000;
 	font-size: 36px;
+	font-weight: bold;
 }
-.demo-body h2 {
+.tagline {
 	margin: 0 auto;
 	color: #707070;
 	font-size: 22px;
+	font-weight: bold;
 }
-.demo-body h3 {
+.price {
 	height: 240px;
 	margin: 0 auto;
 	background: url('../img/example-laptop.png') 50% 50% no-repeat;
 	color: #fff;
 	font-size: 26px;
+	font-weight: bold;
 	line-height: 185px;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75), 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
-.button {
+.action-button {
 	display: block;
 	margin: 0 30px 0 30px;
 	padding: 18px 0;
@@ -103,7 +101,7 @@ hr {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff62c462', endColorstr='#ff51a351', GradientType=0);
 	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 }
-.button:hover {
+.action-button:hover {
   text-decoration: none;
   color: #ffffff;
   background-color: #51a351;
@@ -238,53 +236,47 @@ input:focus {
 
 
 
-.green-2 { background-color: #51a351; }
-.green-1 { background-color: #62c462; }
+[data-color=green] .color-2 { background-color: #51a351; }
+[data-color=green] .color-1 { background-color: #62c462; }
 
-.blue-2 { background-color: #0044cc; }
-.blue-1 { background-color: #0088cc; }
+[data-color=blue] .color-2 { background-color: #0044cc; }
+[data-color=blue] .color-1 { background-color: #0088cc; }
 
-.blue-mms-2 { background-color: #2d5b98; }
-.blue-mms-1 { background-color: #367ab3; }
+[data-color=blue-mms] .color-2 { background-color: #2d5b98; }
+[data-color=blue-mms] .color-1 { background-color: #367ab3; }
 
-.blue-light-2 { background-color: #2f96b4; }
-.blue-light-1 { background-color: #5bc0de; }
+[data-color=blue-light] .color-2 { background-color: #2f96b4; }
+[data-color=blue-light] .color-1 { background-color: #5bc0de; }
 
-.yellow-1 { background-color: #ffd95e; }
-.yellow-2 { background-color: #f2ba00; }
+[data-color=yellow] .color-1 { background-color: #ffd95e; }
+[data-color=yellow] .color-2 { background-color: #f2ba00; }
 
-.orange-1 { background-color: #fbb450; }
-.orange-2 { background-color: #f89406; }
+[data-color=orange] .color-1 { background-color: #fbb450; }
+[data-color=orange] .color-2 { background-color: #f89406; }
 
-.red-1 { background-color: #ee5f5b; }
-.red-2 { background-color: #bd362f; }
+[data-color=red] .color-1 { background-color: #ee5f5b; }
+[data-color=red] .color-2 { background-color: #bd362f; }
 
-.purple-1 { background-color: #af4ce8; }
-.purple-2 { background-color: #611bbd; }
+[data-color=purple] .color-1 { background-color: #af4ce8; }
+[data-color=purple] .color-2 { background-color: #611bbd; }
 
-.pink-1 { background-color: #ff5edf; }
-.pink-2 { background-color: #f000c0; }
+[data-color=pink] .color-1 { background-color: #ff5edf; }
+[data-color=pink] .color-2 { background-color: #f000c0; }
 
-.black-1 { background-color: #444444; }
-.black-2 { background-color: #222222; }
+[data-color=black] .color-1 { background-color: #444444; }
+[data-color=black] .color-2 { background-color: #222222; }
 
-code {
-	font-weight: bold;
-}
 
-p, .main-content, code.prettyprint {
-	margin: 20px auto 0;
-	padding:  0 10px 0;
-	max-width: 760px;
+
+code.prettyprint {
+	display: block;
+	padding: 10px;
 	text-align: left;
 	line-height: 1.4em;
+	background-color: #f2f8fc;
+	border: solid 1px #dbe7f3;
 }
-h2.main-content {
-	margin-top: 40px;
-}
-h4.main-content {
-	margin-top: 30px;
-}
+/*
 code.prettyprint {
 	margin: 0;
 	display: block;
@@ -292,9 +284,11 @@ code.prettyprint {
 	background: #fff;
 	border: solid 1px #aaaeb0;
 }
-
-li.L0, li.L1, li.L2, li.L3, li.L5, li.L6, li.L7, li.L8 { list-style: decimal inside;  }
-li.L1, li.L3, li.L5, li.L7, li.L9 { background: #f5f5f5; }
+*/
+li.L0, li.L1, li.L2, li.L3, li.L5, li.L6, li.L7, li.L8, li.L9 {
+    list-style-type: decimal !important;
+}
+li.L1, li.L3, li.L5, li.L7, li.L9 { background: #EAF1F8; }
 
 .code-wrapper {
 	margin: 10px 0;
